<resources>
    <string name="app_name">Touch_Control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Touch_Control</string>
    <string name="nav_header_subtitle">Made by Akhil</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="phone">Enter Phone Number</string>
    <string name="send">Send</string>
    <string name="name">Enter your Name</string>
    <string name="query">Enter your Query</string>
    <string name="details"> In Hand Touchpad</string>
    <string name="details1">Slideshow</string>
    <string name="details2">Enter Details</string>
    <string name="details3">Not Able to Connect , Try Again !</string>
    <string name="save1">Save</string>
    <string name="ip">Enter IP Address</string>
    <string name="port">Enter Port</string>
    <string name="title_activity_settings">Settings</string>
    <string name="disconnect">Change Device</string>
    <string name="connect">Connect</string>
    <string name="disconnect1">Disconnect</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="powerpoint">Open Powerpoint</string>
    <string name="open">Powerpoint Opened</string>
    <string name="close">Powerpoint Closed</string>

    <!-- Strings related to Settings -->


    <string name="connected_msg">Connected to server</string>
    <string name="connected_dont_msg">Couldn\'t connect to server</string>
    <string name="save">Saved</string>
    <string name="error">Error occurred when connecting!</string>
    <string name="hold">Caution!</string>
    <string name="wifienable">Wi-Fi network is not active.\n Do you want activate?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="go_on">Continue</string>
    <string name="title_activity_touchpad">Touchpad</string>
    <string name="title_activity_slideshow">Slideshow</string>

    <string name="title_activity_motion_control">MotionControl</string>
    <string name="title_activity_about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_help">Help</string>
</resources>
