<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AllActivity.Settings"
    tools:showIn="@layout/activity_settings">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details2"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#fff"
        android:background="#050505"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible" />


    <EditText
        android:id="@+id/txt21"
        android:defaultValue="@string/ip"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#050505"
        android:background="#dedede"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"/>

    <EditText
        android:id="@+id/txt22"
        android:defaultValue="@string/port"
        android:inputType="number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#050505"
        android:background="#dedede"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        android:autofillHints=""/>

    <Button android:title="Save"
        android:id="@+id/button51"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:background="@android:color/holo_blue_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="350dp"
        android:text="@string/save1" />

</FrameLayout>