<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/txt71"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#050505"
        android:background="#dedede"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/txt72"
        android:inputType="phone"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#050505"
        android:background="#dedede"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        android:autofillHints=""/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:id="@+id/txt73"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="true"
        android:title="@string/query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:minLines="1"
        android:maxLines="10"
        android:hint="@string/query"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#050505"
        android:background="#dedede"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        android:autofillHints=""/>

    <Button
        android:title="Send"
        android:id="@+id/button52"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:background="@android:color/holo_blue_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/send" />

    </LinearLayout>



</FrameLayout>
