<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AllActivity.Touchpad"
    tools:showIn="@layout/activity_touchpad">

    <TextView
        android:id="@+id/txt31"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_blue_dark"
        android:visibility="visible"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/button51"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="530dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/left"
                    />

                <Button
                    android:id="@+id/button61"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="530dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/right"
                    />

    </LinearLayout>

    <Button
        android:id="@+id/button41"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="590dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/disconnect1"
        android:onClick="onDestroy"/>



</FrameLayout>