<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#fff"
            android:background="#050505"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="visible" />


        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="200dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/connect"
            android:onClick="fourth"
            />

        <Button
            android:id="@+id/button09"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="200dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/connect"
            android:visibility="invisible"
            android:onClick="fifth"
            />

        <Button
            android:id="@+id/button4"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="290dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/disconnect"
            android:onClick="second"
            />

        <TextView
            android:id="@+id/txt41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details3"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="360dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#ff0000"
            android:background="@android:color/transparent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="invisible" />
    </FrameLayout>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />



</android.support.v4.widget.DrawerLayout>

